Update Docker and JVM config for modern environments
Switch base image from clojure:alpine to clojure:latest, add a
Dockerfile.test, and add JVM --add-opens flag required by newer Java
versions. Update README to reflect these changes and document the new
cohesion analysis.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>